manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: tuannd2211/todo-frontend:v1.0
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: tuannd2211/todo-backend:v1.0
        ports:
        - containerPort: 3000
