manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
spec:
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
