manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/renew-before: 360h
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - todo.tuannguyenduc.id.vn
    - argo.tuannguyenduc.id.vn
    secretName: cert-secret
  rules:
  - host: todo.tuannguyenduc.id.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-service
            port:
              number: 3001
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 3000
